[project]
name = "aec-cli"
description = "AWS EC2 CLI"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["AWS", "EC2", "command line", "cli"]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = [
    "boto3==1.43.1",
    "importlib_resources==7.1.0",
    "pytoml==0.1.21",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "rich==15.0.0",
    "typing_extensions==4.15.0",
]

[dependency-groups]
dev = [
    "build~=1.5",
    "boto3-stubs[ec2,compute-optimizer,ssm,s3]",
    "cogapp~=3.6",
    "dirty-equals~=0.11",
    # pinned because of https://github.com/getmoto/moto/issues/9160
    "moto[ec2]==5.1.22",
    "prek~=0.3.11",
    "pyright==1.1.409",
    "pyfakefs~=6.2",
    "pytest~=9.0",
    "pytest-mock~=3.15",
    "ruff~=0.15.12",
    "twine~=6.2",
]

[project.scripts]
aec = "aec.main:main"

[project.urls]
homepage = "https://github.com/seek-oss/aec"

[build-system]
requires = ["setuptools~=82.0", "setuptools_scm~=10.0", "wheel~=0.47"]

# enable setuptools_scm to set the version based on git tags
[tool.setuptools_scm]
fallback_version = "0.0.0"


[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
reportTypedDictNotRequiredAccess = false
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
reportMatchNotExhaustive = true
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 120
# first-party imports for sorting
src = ["src"]
fix = true
show-fixes = true

[tool.ruff.lint]
# rules to enable/ignore
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "ANN",   # type annotations
    "N",     # pep8-naming
    "B",     # bugbear
    "I",     # isort
    "ARG",   # flake8-unused-arguments
    "SLF",   # flake8-self
    "UP",    # pyupgrade
    "PERF",  # perflint
    "RUF",   # ruff-specific
    "SIM",   # flake8-simplify
    "S113",  # request-without-timeout
    "ASYNC", # flake8-async
]

ignore = [
    # allow no return type from dunder methods
    "ANN204",
    # allow == True because pandas dataframes overload equality
    "E712",
]
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
# test functions don't need return types
"tests/*" = ["ANN201", "ANN202"]
# main.py can have long lines
"src/aec/main.py" = ["E501"]

[tool.ruff.lint.flake8-annotations]
# allow *args: Any, **kwargs: Any
allow-star-arg-any = true
